--- a/views/authentication/login.ejs
+++ b/views/authentication/login.ejs
@@ -19,6 +19,7 @@
                 <input type="password" name="password" id="password" required>
             </div>
 
+            <input type="text" name="_csrf" value="<%= csrfToken %>" class="hidden">
             <button type="submit">Login</button>
         </form>
     </div>
