--- a/views/authentication/signup.ejs
+++ b/views/authentication/signup.ejs
@@ -27,6 +27,7 @@
                 <input type="password" name="confirmPassword" id="confirm-password" required>
             </div>
 
+            <input type="text" name="_csrf" value="<%= csrfToken %>" class="hidden">
             <button type="submit">Signup</button>
         </form>
     </div>
