--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -22,6 +22,7 @@
             <li><a href="#"><%= loggedInUsername %></a></li>
             <li>
                 <form action="/logout" method="POST">
+                    <input type="text" name="_csrf" value="<%= csrfToken %>" class="hidden">
                     <button type="submit" id="logout">Logout</button>
                 </form>
             </li>
