--- a/views/shop/list-product.ejs
+++ b/views/shop/list-product.ejs
@@ -28,6 +28,7 @@
                                 <a href="/products/<%= product._id %>" class="link-product">Details</a>
                                 <form action="/post-cart/<%= product._id %>?currentPage=productList" method="POST">
                                     <% if(isAuthenticated === true) { %>
+                                        <input type="text" name="_csrf" value="<%= csrfToken %>" class="hidden">
                                         <button type="submit" name="action" value="add">Add to Cart</button>
                                     <% } else { %>
                                         <button type="submit" name="action" value="add" disabled>Add to Cart</button>
